--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuizeApp</title>
+  <title>Absolute Study</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"> -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css">
-    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/your_kit_code.js"> -->
+
 </head>
 <body>
   <app-root></app-root>
@@ -21,36 +21,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     
-    <script>
-      // $(document).ready(function(){
-      //     $('#sidebarCollapse').on('click', function(){
-      //         $('#sidebar').toggleClass('active');
-      //         $('#disply-container').toggleClass('disply-container');
-      //         if ($('#sidebar').hasClass('active')) {
-      //             $('#sidebar').removeClass('inActive');
-      //             isSidebarOpen = true;
-      //         } else {
-      //             $('#sidebar').addClass('inActive');
-      //             isSidebarOpen = false;
-      //         }
-      //     });
-      // });
-
-      // $(document).ready(function(){
-      //     $('#sidebarCollapse').on('click', function(){
-      //         $('#disply-container').toggleClass('disply-container');
-      //         if ($('#disply-container').hasClass('disply-container')) {
-      //             $('#disply-container').removeClass('sub-container');
-      //             isSidebarOpen = true;
-      //         } else {
-      //             $('#disply-container').addClass('disply-container');
-      //             isSidebarOpen = false;
-      //         }
-      //     });
-      // });
-
-
-    </script>
   
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
